cluster/apps/neko/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: neko
    app.kubernetes.io/version: latest
  name: neko
spec:
  selector:
    app.kubernetes.io/name: neko
  ports:
  - name: http-neko
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: turn-neko
    port: 3478
    targetPort: 3478
    protocol: TCP
