cluster/apps/neko/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: neko-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: neko
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: internal-gateway
  - from: []
    ports:
    - port: 52000
      protocol: UDP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gluetun-proxy
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gluetun-proxy
    ports:
    - port: 8888
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 100.64.0.0/10
    ports:
    - protocol: UDP
